finalized e-04-great-lakes-datawrangling

--- a/exercises/e-04-great-lakes-datawrangling/great-lakes-datawrangling.Rmd
+++ b/exercises/e-04-great-lakes-datawrangling/great-lakes-datawrangling.Rmd
@@ -8,12 +8,16 @@ output: github_document
 knitr::include_graphics("img/stocking.jpeg")
 ```
 
-Source: [Great Lakes Databse](http://www.glfc.org/great-lakes-databases.php)
-
 ```{r load-pkg, message = FALSE}
 library(tidyverse)
 library(skimr)
 ```
+
+## Data
+
+The data for this exercise come from the [Great Lakes Database](http://www.glfc.org/great-lakes-databases.php) which provides information about fish caught annually (annual fish catches) in the Great Lakes (Michigan, Huron, Superior, Erie, Ontario) for the last \~150 years.
+The Great Lakes have been hit by numerous major ecological changes during this period, including invasion by alewife herring (1950s), introduction of pacific salmon (e.g., chinook; 1970s), and later invasion by quagga and zebra mussels (1990s).
+If you're interested in this topic I would recommend the book *The Death and Life of the Great Lakes* by Dan Egan.
 
 ```{r load-data, message = FALSE, warning = FALSE}
 # From TidyTuesday: https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-06-08/readme.md
@@ -21,6 +25,8 @@ fishing <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/ti
 ```
 
 ## Exercises
+
+**Remember, for ungraded class exercises such as these, just complete the code chunks in this document and knit. Don't commit or push your changes. You're all working from the same repo.**
 
 ### Exercise 1.
 
